---------------------------------------------------------------------------------------------------
Version: 5.1.8
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.1.7
Date: 2020-09-15
  Bugfixes:
    - Fixed entities being upgraded when removing modules
---------------------------------------------------------------------------------------------------
Version: 5.1.6
Date: 2020-09-13
  Bugfixes:
    - Fixed unreproducible error when editing a scenario in the map editor
    - Fixed error when removing a machine that requested multiple modules to be inserted
---------------------------------------------------------------------------------------------------
Version: 5.1.5
Date: 2020-09-09
  Features:
    - The gui can be opened by right-clicking a Module Inserter
    - Added hotkey to toggle the gui (Default: Ctrl + I)
    - Added mod setting to hide the button in the top left corner
  Changes:
    - Upgrading/changing modules uses the upgrade planner functionality in most cases,
      so that modules only get dropped when the new modules are delivered.
---------------------------------------------------------------------------------------------------
Version: 5.1.4
Date: 19. 08. 2020
  Bugfixes:
    - Fixed error when using ModuleInserter with an empty configuration
---------------------------------------------------------------------------------------------------
Version: 5.1.3
Date: 16. 08. 2020
  Bugfixes:
    - Fixed some errors when updating from old versions
---------------------------------------------------------------------------------------------------
Version: 5.1.2
Date: 15. 08. 2020
  Bugfixes:
    - Added missing migrations for older versions
---------------------------------------------------------------------------------------------------
Version: 5.1.1
Date: 11. 08. 2020
  Bugfixes:
    - Fixed error with latest version of flib