@@ -26,6 +26,7 @@ module_inserter_overwrite=Overwrite presets
 module_inserter_proxies_per_tick=Proxies/tick
 module_inserter_fill_all=Fill slots
 module_inserter_hide_button=Hide button
+module_inserter_close_after_load=Close GUI after loading a preset
 
 [mod-setting-description]
 module_inserter_overwrite=Allow overwriting existing presets
