@@ -23,6 +23,28 @@ styles["mi_shortcut_bar_button_green"] = {
     padding = 4
 }
 
+styles["mi_preset_button"] = {
+    type = "button_style",
+    parent = "button",
+    width = 150,
+}
+
+local button = styles.button
+
+styles["mi_preset_button_selected"] = {
+    type = "button_style",
+    parent = "mi_preset_button",
+    default_font_color = button.selected_font_color,
+    default_graphical_set = button.selected_graphical_set,
+
+    hovered_font_color = button.selected_hovered_font_color,
+    hovered_graphical_set = button.selected_hovered_graphical_set,
+
+    clicked_font_color = button.selected_clicked_font_color,
+    clicked_vertical_offset = 1, -- text/icon goes down on click
+    clicked_graphical_set = button.selected_clicked_graphical_set,
+}
+
 styles.frame_action_button_red =
     {
       type = "button_style",
