@@ -10,6 +10,13 @@ data:extend({
     },
     {
         type = "bool-setting",
+        name = prefix .. "close_after_load",
+        setting_type = "runtime-per-user",
+        default_value = true,
+        order = "a"
+    },
+    {
+        type = "bool-setting",
         name = prefix .. "overwrite",
         setting_type = "runtime-per-user",
         default_value = true,
@@ -29,18 +36,4 @@ data:extend({
         default_value = false,
         order = "d"
     }
-    -- {
-    --     type = "bool-setting",
-    --     name = prefix .. "enable_module",
-    --     setting_type = "startup",
-    --     default_value = true,
-    --     order = "a"
-    -- },
-    -- {
-    --     type = "bool-setting",
-    --     name = prefix .. "free_wires",
-    --     setting_type = "runtime-global",
-    --     default_value = false,
-    --     order = "a"
-    -- }
 })
